--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,10 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
+        name: Set commit SHA
+        id: vars
+        run: echo "::set-output name=sha_short::$(echo ${GITHUB_SHA::7})"
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -28,4 +32,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-cicd-github:${{ github.sha }}.substring(0,7)
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-cicd-github:${{ steps.vars.outputs.sha_short }}
