--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,9 +32,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags:
-          - ${{ secrets.DOCKERHUB_USERNAME }}/demo-cicd-github:${{ steps.vars.outputs.sha_short }}
-          - ${{ secrets.DOCKERHUB_USERNAME }}/latest
+          tags:  ${{ secrets.DOCKERHUB_USERNAME }}/demo-cicd-github:${{ steps.vars.outputs.sha_short }}, ${{ secrets.DOCKERHUB_USERNAME }}/demo-cicd-github:latest
   deploy:
     runs-on: self-hosted
     steps:
