--- a/.github/workflows/my-hello-world-composite-action.yml
+++ b/.github/workflows/my-hello-world-composite-action.yml
@@ -6,10 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      - uses: actions/checkout@v4
-      - id: foo
-        uses: huy8895/hello-world-composite-action@v1.0.2
+      - id: my-composite-action
+        uses: huy8895/hello-world-composite-action@v1.0.3
         with:
           who-to-greet: 'Trinh Van Huy'
-      - run: echo random-number ${{ steps.foo.outputs.random-number }}
+      - name: show output random-number from my-composite-action
+        run: echo random-number ${{ steps.my-composite-action.outputs.random-number }}
+        shell: bash
+      - name: show commit-sha_short from my-composite-action
+        run: echo sha_short ${{ steps.my-composite-action.outputs.commit-sha_short }}
         shell: bash
