--- a/.github/workflows/my-hello-world-composite-action.yml
+++ b/.github/workflows/my-hello-world-composite-action.yml
@@ -7,7 +7,7 @@ jobs:
     name: A job to say hello
     steps:
       - id: my-composite-action
-        uses: huy8895/hello-world-composite-action@v1.0.4
+        uses: huy8895/hello-world-composite-action@v1.0.5
         with:
           who-to-greet: 'Trinh Van Huy'
       - name: show output random-number from my-composite-action
@@ -15,4 +15,7 @@ jobs:
         shell: bash
       - name: show commit-sha_short from my-composite-action
         run: echo sha_short ${{ env.sha_short }}
+        shell: bash
+      - name: show repository-name from my-composite-action
+        run: echo REPOSITORY_NAME ${{ env.REPOSITORY_NAME }}
         shell: bash
